[package]
name = "screeps_wasm"
version = "0.1.0"
authors = ["nanoda"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fern = "0.7.1"
js-sys = "0.3.85"
log = "0.4.29"
screeps-game-api = "0.23.1"
wasm-bindgen = "0.2.108"
web-sys = {version = "0.3.85", features = ["console"]}

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
# See wasm-opt for full available options; handy examples:
# -O4 - optimize aggressively for performance
# -Oz - optimize aggressively for code size
# -g - leave debug info in place, allowing for more descriptive stack traces on panic
# --signext-lowering - removes opcodes that the screeps servers can't load (see 
# https://github.com/rustyscreeps/screeps-game-api/issues/391)
wasm-opt = ["-O4", "--signext-lowering"]

[features]
default = []

sim = ["screeps-game-api/sim"]
mmo = ["screeps-game-api/mmo"]
